fixing img sizes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
-                    <img src="img/portfolio-susan.png" alt="Susan Ruiz Homepage Design" />
+                    <img class="Work_SectionImageFile" src="img/portfolio-susan.png" alt="Susan Ruiz Homepage Design" />
                 </div>
             </div>
             <div class="Work_SectionCard">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
-                    <img src="img/portfolio-reframe.png" alt="Reframe Homepage Design" />
+                    <img class="Work_SectionImageFile" src="img/portfolio-reframe.png" alt="Reframe Homepage Design" />
                 </div>
             </div>
             <div class="Work_SectionCard">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
-                    <img src="img/portfolio-herron.png" alt="Herron for Lenexa Homepage Design" />
+                    <img class="Work_SectionImageFile" src="img/portfolio-herron.png" alt="Herron for Lenexa Homepage Design" />
                 </div>
             </div>
             <div class="Work_SectionCard">
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 Work_SectionImage">
-                    <img src="img/portfolio-financial.png" alt="Blueprint Financial Homepage Design" />
+                    <img class="Work_SectionImageFile" src="img/portfolio-financial.png" alt="Blueprint Financial Homepage Design" />
                 </div>
             </div>
         </section>
